# scriptTok

./: .gitignore  audio_transcriber.py  gemini_client.py  main.py  system_prompt.txt  temp.py  tiktok_profile_scraper.py
backend/: main.py  pyproject.toml  requirements.txt  run.py  tasks.py
backend/api/: routes.py
backend/core/: audio_transcriber.py  gemini_client.py  system_prompt.txt  tiktok_audio_processor.py  tiktok_downloader.py  tiktok_profile_scraper.py  utils.py  workers.py
backend/tiktok_script_generator_backend.egg-info/: PKG-INFO  SOURCES.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
