# backend/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-script-generator-backend"
version = "0.1.0"

# This is the corrected section.
# The package discovery instruction is now in its own table.
[tool.setuptools]
packages = { find = {} }